Ensure long subreddit titles do not overflow

--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -19,7 +19,9 @@
 }
 
 .navigation li {
+  overflow: hidden;
   padding: 15px;
+  text-overflow: ellipsis;
 }
 
 .navigation .selected {
